<resources>
    <string name="app_name">EatWise</string>
    <string name="title_home">Home</string>
    <string name="title_monitoring">Monitoring</string>
    <string name="title_camera">Camera</string>
    <string name="title_tips">Tips</string>
    <string name="title_profile">Profile</string>
    <string name="tips_menu">Tips</string>
    <string name="todo">TODO</string>
    <string name="default_web_client_id">814148574453</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="tips_image">TipsImage</string>
    <string name="tips_title">Lorem ipsum dolor sit amet,\nconsectetur adipiscing elit.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tips_description">tips description</string>
    <string name="height">Enter your Height (cm)</string>
    <string name="label">Label</string>
    <string name="serving">Per : 100 grams</string>
    <string name="hello">Hello,</string>
    <string name="bmi">BMI: XX.XX</string>
    <string name="bmi_description">BMI Description</string>
    <string name="example">0</string>
    <string name="weight">Enter your Weight (kg)</string>
    <string name="recommendation">Recommendation</string>
    <string name="about_me">About Me</string>
    <string name="app_version_v1">App Version v1</string>
    <string name="privacy_policy">Privacy Policy | Terms of Use</string>
    <string name="copyright">Copyright©2024 by EatWise</string>
    <string name="title_article">Judul Artikel</string>
    <string name="content_article">Ini adalah isi dari artikel. Tambahkan konten yang sesuai di sini.</string>
    <string name="timestamp">Timestamp</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="username">Username</string>
    <string name="content_username">Enter your username</string>
    <string name="gender">Gender</string>
    <string name="content_gender">gender</string>
    <string name="birthday">Birthday</string>
    <string name="content_birthday">birthday</string>
    <string name="goal">Goal</string>
    <string name="content_goal">goal</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="input_password">Masukkan Password</string>
    <string name="sign_up">Register</string>
    <string name="sign_in">Login</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="day">/Day</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="sign_out">Logout</string>
    <string name="enter_password">Enter Password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="_faq">FAQ</string>
    <string name="welcome">Welcome to EatWise!</string>
    <string name="content">We’re excited to have you onboard. Below are answers to common questions to help you get started:</string>
    <string name="_1">1. What is EatWise, and how can it help me?</string>
    <string name="content_1">EatWise is a nutrition app designed to help you make healthier food choices. Using machine learning, it provides real-time nutrition feedback, calorie analysis, and personalized recommendations tailored to your health goals.</string>
    <string name="_2">2. How do I use the food scanning feature?</string>
    <string name="content_2">Simply use your phone’s camera to scan your food. The app will analyze its calorie content and provide nutritional information instantly.</string>
    <string name="_3">3. Can I track my health goals with EatWise?</string>
    <string name="content_3">Yes, EatWise allows you to set and track health goals, such as weight loss, or maintaining a balanced diet.</string>
    <string name="_4">4. How accurate are the nutrition recommendations?</string>
    <string name="content_4">Our recommendations are powered by advanced machine learning algorithms and are continuously refined based on user feedback to ensure accuracy.</string>
    <string name="_5">5. Is EatWise suitable for everyone?</string>
    <string name="content_5">Absolutely! The app is designed with an intuitive interface to be accessible to users of all ages and backgrounds.</string>
    <string name="_6">6. Is my personal data safe with EatWise?</string>
    <string name="content_6">Yes, we take your privacy seriously. All data is securely stored and used solely to enhance your experience.</string>
    <string name="result">Result</string>
    <string name="displayed_image">Displayed Image</string>
    <string name="nutrition">Magnesium</string>
    <string name="percen">75%</string>
</resources>