<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/action_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:padding="8dp"
                android:src="@drawable/back"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/action_text"/>

            <TextView
                android:id="@+id/action_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/_faq"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:fontFamily="@font/fredoka_semibold"
                app:layout_constraintStart_toEndOf="@id/action_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/action_bar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/fredoka_semibold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/fredoka_regular"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_faq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/_1"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_1"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_2"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_2"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_3"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_3"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_4"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_4"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_5"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_5"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/_6"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_6"
                android:textColor="@color/black"
                android:fontFamily="@font/fredoka_regular"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>