<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/tips_image"
            android:scaleType="centerCrop"
            android:layout_marginBottom="12dp"
            android:background="#F5F5F5" />

        <TextView
            android:id="@+id/tipTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips_title"
            android:textSize="22sp"
            android:textColor="#2C3E50"
            android:fontFamily="@font/fredoka_regular"
            android:lineSpacingExtra="6dp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="2" />

        <TextView
            android:id="@+id/tipDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips_description"
            android:textSize="16sp"
            android:textColor="#7F8C8D"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="12dp"
            android:ellipsize="end"
            android:maxLines="3" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
