<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fredoka_semibold"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_app" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_green"
        app:cursorColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/iv_logo">

        <com.example.eatwise.ui.authentication.EmailInput
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/fredoka_medium"
            android:paddingHorizontal="16dp"
            android:hint="@string/enter_email"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_green"
        app:cursorColor="@color/black"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/layout_email_input">

        <com.example.eatwise.ui.authentication.PasswordInput
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/fredoka_medium"
            android:paddingHorizontal="16dp"
            android:hint="@string/enter_password"
            android:singleLine="true"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_green"
        android:gravity="center"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/layout_password_input"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signin">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:contentDescription="@string/todo"
            android:src="@drawable/google" />

        <Button
            android:id="@+id/signin_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:fontFamily="@font/fredoka_medium"
            android:paddingHorizontal="12dp"
            android:text="@string/login_with_google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/fredoka_medium"
            android:gravity="center"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:text="@string/do_you_already_have_an_account" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/fredoka_medium"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/green"
            android:textSize="16sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_login_progress"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:indeterminateTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>